fix(formatter): ensure consistent formatting for backend and test Python files
- Added separate Makefile target for formatting test files (run-format-tests)
- Updated package.json to run both backend and test formatters with fmt:py
- Updated lint-staged.config.js to format all Python files (backend + tests) on commit
- Added tests/pyproject.toml for test-specific formatting config
- Reformatted all test files for consistency

This resolves the issue where formatting was inconsistent between backend and test files, preventing future formatting diffs and ensuring a clean, unified code style across the project.

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "build:frontend": "webpack --output-path dist/public --config src/apps/frontend/webpack.prod.js",
     "coverage": "make run-vulture",
     "fmt": "concurrently npm:fmt:*",
-    "fmt:py": "make run-format",
+    "fmt:py": "make run-format && make run-format-tests",
     "fmt:ts": "prettier --write \"**/*.{js,ts,tsx}\" --ignore-path .prettierignore",
     "lint": "concurrently -m 1 --kill-others-on-fail 'npm:lint:*(!fix)'",
     "lint:ts": "eslint .",
