feat: auto-create test user in dev and preview environments
- Add config flags and credentials for test user in development and preview YAML files
- Implement generic setup script to create a test user on app startup if enabled and not already present
- Integrate setup script into backend startup for dev/preview environments only
- Use config-driven, boilerplate-friendly approach (no project-specific logic)
- Add documentation to README for usage, customization, and disabling of the feature
- Use consistent logging for setup actions

"Rebase with main branch"

--- a/config/default.yml
+++ b/config/default.yml
@@ -15,6 +15,12 @@ accounts:
   token_signing_key: 'JWT_TOKEN'
   token_expiry_days: 1
   token_expires_in_seconds: 3600
+  create_test_user_account: false  # Set to true in dev/preview to enable test user creation
+  test_user:
+    first_name: "Test"
+    last_name: "User"
+    username: "test@example.com"
+    password: "testpassword"
 
 public:
   authenticationMechanism: 'EMAIL' #or 'PHONE'
