--- a/config/preview.yml
+++ b/config/preview.yml
@@ -13,3 +13,11 @@ public:
   default_otp:
     enabled: true
     code: '1234'
+
+account:
+  create_test_user_account: true
+  test_user:
+    first_name: "Preview"
+    last_name: "User"
+    username: "preview@example.com"
+    password: "previewpassword"
