--- a/config/custom-environment-variables.yml
+++ b/config/custom-environment-variables.yml
@@ -29,6 +29,9 @@ twilio:
   messaging_service_sid: 'TWILIO_MESSAGING_SERVICE_SID'
 
 public:
+  default_otp:                          
+    enabled: 'DEFAULT_OTP_ENABLED'      
+    code: 'DEFAULT_OTP'                 
   datadog:
     applicationId: 'DATADOG_APPLICATION_ID'
     clientToken: 'DATADOG_CLIENT_TOKEN'
