Add scheduled token cleanup worker and config
- Introduced `TokenCleanupWorker` to remove inactive device tokens.
- Added config entries: `token_cleanup_enabled`, `token_cleanup_days`, and `token_cleanup_schedule`.
- Updated server startup to schedule worker when enabled and log its schedule.
- Registered worker in `TemporalConfig` for orchestration.
- Helps keep device token store clean and avoid unnecessary growth.

--- a/config/production.yml
+++ b/config/production.yml
@@ -11,3 +11,7 @@ is_server_running_behind_proxy: true
 public:
   datadog:
     enabled: 'true'
+
+notification:
+  token_cleanup_days: 90
+  token_cleanup_schedule: "0 3 * * 0"
