--- a/config/default.yml
+++ b/config/default.yml
@@ -20,3 +20,8 @@ public:
   authenticationMechanism: 'EMAIL' #or 'PHONE'
   datadog:
     enabled: 'false'
+
+notification:
+  token_cleanup_days: 60
+  token_cleanup_enabled: true
+  token_cleanup_schedule: "0 2 * * 0" 
