--- a/config/development.yml
+++ b/config/development.yml
@@ -17,3 +17,7 @@ public:
   default_otp:
     enabled: true
     code: '1234'
+
+notification:
+  token_cleanup_days: 30
+  token_cleanup_enabled: false 
