--- a/config/preview.yml
+++ b/config/preview.yml
@@ -13,3 +13,8 @@ public:
   default_otp:
     enabled: true
     code: '1234'
+
+notification:
+  token_cleanup_enabled: true
+  token_cleanup_days: 30
+  token_cleanup_schedule: "0 4 * * *"
