--- a/config/default.yml
+++ b/config/default.yml
@@ -15,7 +15,7 @@ accounts:
   token_signing_key: 'JWT_TOKEN'
   token_expiry_days: 1
   token_expires_in_seconds: 3600
-  create_test_user_account: false  # Set to true in dev/preview to enable test user creation
+  create_test_user_account: false
   test_user:
     first_name: "Test"
     last_name: "User"
