--- a/config/preview.yml
+++ b/config/preview.yml
@@ -11,5 +11,4 @@ is_server_running_behind_proxy: true
 public:
   authenticationMechanism: 'EMAIL' #or 'PHONE'
   default_otp:
-    enabled: true
-    code: '1234'
+    enabled: false
