Add default OTP whitelist support and update OTP check logic
- Added `whitelist` field to environment config files under `public.default_otp`.
- Updated `is_default_otp_enabled` to check if a phone number is whitelisted before returning the default OTP.
- Added error handling and logging for whitelist lookup failures.
- Allows safer use of default OTP codes by restricting them to specific numbers.

--- a/config/default.yml
+++ b/config/default.yml
@@ -24,6 +24,10 @@ accounts:
 
 public:
   authenticationMechanism: 'EMAIL' #or 'PHONE'
+  default_otp:
+    enabled: false
+    code: '1234'
+    whitelist: []
   datadog:
     enabled: 'false'
 
