Add `default_otp` environment variable mappings
- Added `default_otp` block to map new env vars:
  - `DEFAULT_OTP_ENABLED`
  - `DEFAULT_OTP_CODE`
  - `DEFAULT_OTP_WHITELIST`
- Supports configurable default OTP behavior across environments.

--- a/config/custom-environment-variables.yml
+++ b/config/custom-environment-variables.yml
@@ -38,3 +38,9 @@ public:
     sessionReplaySampleRate: 'DATADOG_SESSION_REPLAY_SAMPLE_RATE'
     sessionSampleRate: 'DATADOG_SESSION_SAMPLE_RATE'
     site: 'DATADOG_SITE'
+  default_otp:
+    enabled: 'DEFAULT_OTP_ENABLED'
+    code: 'DEFAULT_OTP_CODE'
+    # Whitelist is handled as a comma-separated string in environment variables
+    # and will be parsed by the application
+    whitelist: 'DEFAULT_OTP_WHITELIST'
