Add test phone number whitelist for OTP handling
- Introduced `test_whitelist` config to selectively use default OTP codes for whitelisted phone numbers.
- Enhanced `OTPUtil` to check if a number is whitelisted before generating OTP or sending SMS.
- Adjusted SMS sending: now skips sending if default OTP is used or SMS is disabled.
- Added logic to normalize phone numbers when checking against whitelist for consistency.
- Enabled parsing comma-separated phone numbers from environment variables for easier configuration across environments.

--- a/config/custom-environment-variables.yml
+++ b/config/custom-environment-variables.yml
@@ -38,3 +38,8 @@ public:
     sessionReplaySampleRate: 'DATADOG_SESSION_REPLAY_SAMPLE_RATE'
     sessionSampleRate: 'DATADOG_SESSION_SAMPLE_RATE'
     site: 'DATADOG_SITE'
+  default_otp:
+    code: 'DEFAULT_OTP_CODE'
+  test_whitelist:
+    enabled: 'TEST_WHITELIST_ENABLED'
+    phone_numbers: 'TEST_WHITELIST_PHONE_NUMBERS'
