--- a/config/docker-dev.yml
+++ b/config/docker-dev.yml
@@ -17,3 +17,8 @@ public:
   default_otp:
     enabled: true
     code: '1234'
+  test_whitelist:
+    enabled: true
+    phone_numbers:
+      - '+919999999999'
+      - '+911234567890'
