Rename OTP config key to `whitelisted_phone_numbers_with_country_code`
- Replaced `public.default_otp.whitelist` with `public.default_otp.whitelisted_phone_numbers_with_country_code` across all configuration files.
- Updated `OTPUtil` to reference the new config key.
- Refactored all tests to reflect the updated configuration name.
- Enhances clarity by specifying the expected format (phone numbers with country codes).

--- a/config/default.yml
+++ b/config/default.yml
@@ -27,7 +27,7 @@ public:
   default_otp:
     enabled: false
     code: '1234'
-    whitelist: []
+    whitelisted_phone_numbers_with_country_code: []
   datadog:
     enabled: 'false'
 
