--- a/config/custom-environment-variables.yml
+++ b/config/custom-environment-variables.yml
@@ -41,6 +41,4 @@ public:
   default_otp:
     enabled: 'DEFAULT_OTP_ENABLED'
     code: 'DEFAULT_OTP_CODE'
-    # Whitelist is handled as a comma-separated string in environment variables
-    # and will be parsed by the application
-    whitelist: 'DEFAULT_OTP_WHITELIST'
+    whitelisted_phone_numbers_with_country_code: 'DEFAULT_OTP_WHITELISTED_NUMBERS_WITH_COUNTRY_CODE'
