`Added __name and __format to default_otp enabled variable in custom-environment-variables.yml`

--- a/config/custom-environment-variables.yml
+++ b/config/custom-environment-variables.yml
@@ -39,6 +39,8 @@ public:
     sessionSampleRate: 'DATADOG_SESSION_SAMPLE_RATE'
     site: 'DATADOG_SITE'
   default_otp:
-    enabled: 'DEFAULT_OTP_ENABLED'
+    enabled:
+      __name: 'DEFAULT_OTP_ENABLED'
+      __format: 'boolean'
     code: 'DEFAULT_OTP_CODE'
     whitelisted_phone_number: 'DEFAULT_OTP_WHITELISTED_PHONE_NUMBER'
