Update custom-environment-variables.yml with no changes

--- a/config/custom-environment-variables.yml
+++ b/config/custom-environment-variables.yml
@@ -43,4 +43,4 @@ public:
       __name: 'DEFAULT_OTP_ENABLED'
       __format: 'boolean'
     code: 'DEFAULT_OTP_CODE'
-    whitelisted_phone_number: 'DEFAULT_OTP_WHITELISTED_PHONE_NUMBER'
+    whitelisted_phone_number: 'DEFAULT_OTP_WHITELISTED_PHONE_NUMBER'  # e.g., "9999999999"
