--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -26,7 +26,7 @@ services:
       - '27017:27017'
 
   temporal:
-    image: temporalio/auto-setup:1.27.0
+    image: temporalio/server:1.27.0
     depends_on:
       - temporal-db
     environment:
