--- a/.github/workflows/clean_on_delete.yml
+++ b/.github/workflows/clean_on_delete.yml
@@ -5,7 +5,7 @@ on: delete
 jobs:
   clean:
     if: github.event.ref_type == 'branch'
-    uses: jalantechnologies/github-ci/.github/workflows/clean.yml@v3.2.1
+    uses: jalantechnologies/github-ci/.github/workflows/clean.yml@amaan/fix/skip-temporal-deployment-in-preview
     concurrency:
       group: ci-preview-${{ github.event.ref }}
       cancel-in-progress: true
