fix syntax error

--- a/lib/kube/preview/temporal-deployment.yaml
+++ b/lib/kube/preview/temporal-deployment.yaml
@@ -46,7 +46,7 @@ spec:
                 echo "Upgrading schema for DB: temporal_preview"
                 temporal-sql-tool --plugin postgres12 --ep "${POSTGRES_SEEDS}" -u "${POSTGRES_USER}" -pw "${POSTGRES_PWD}" -p "${DB_PORT}" --db "${DBNAME}" update-schema -d "/etc/temporal/schema/postgresql/v12/temporal/versioned" || {
                 echo "Schema upgrade failed for $1"
-                exit 1S
+                exit 1
               }
               upgrade temporal_preview
           envFrom:
