--- a/lib/kube/preview/temporal-deployment.yaml
+++ b/lib/kube/preview/temporal-deployment.yaml
@@ -64,6 +64,7 @@ spec:
                 --plugin ${DB} \
                 --ep "${POSTGRES_SEEDS}" \
                 -u "${POSTGRES_USER}" \
+                -pw "${POSTGRES_PWD}" \
                 -p "${DB_PORT}" \
                 --db "${DBNAME}" \
                 --tls="${POSTGRES_TLS_ENABLED}" \
@@ -72,7 +73,7 @@ spec:
                 --tls-key-file "${POSTGRES_TLS_KEY_FILE}" \
                 --tls-ca-file "${POSTGRES_TLS_CA_FILE}" \
                 --tls-server-name "${POSTGRES_TLS_SERVER_NAME}" \
-                update-schema -d "/etc/temporal/schema/postgresql/v12/temporal/versioned" || {
+                update-schema -d "/etc/temporal/schema/postgresql/v12/temporal/versioned" --target-version latest   || {
                   echo "Schema upgrade failed"
                   exit 1
                 }
