--- a/lib/kube/preview/temporal-deployment.yaml
+++ b/lib/kube/preview/temporal-deployment.yaml
@@ -43,12 +43,16 @@ spec:
         args:
           - |
               echo "Checking and upgrading schema for DB: ${DBNAME}"
-        
+              if [ -z "${DBNAME}" ]; then
+                echo "DBNAME is not set. Skipping schema upgrade."
+                exit 0
+              fi
               echo "Setting up schema (if not already present)..."
               temporal-sql-tool \
                 --plugin ${DB} \
                 --ep "${POSTGRES_SEEDS}" \
                 -u "${POSTGRES_USER}" \
+                -pw "${POSTGRES_PWD}" \
                 -p "${DB_PORT}" \
                 --db "${DBNAME}" \
                 --tls="${POSTGRES_TLS_ENABLED}" \
@@ -73,7 +77,7 @@ spec:
                 --tls-key-file "${POSTGRES_TLS_KEY_FILE}" \
                 --tls-ca-file "${POSTGRES_TLS_CA_FILE}" \
                 --tls-server-name "${POSTGRES_TLS_SERVER_NAME}" \
-                update-schema -d "/etc/temporal/schema/postgresql/v12/temporal/versioned" --target-version latest   || {
+                update-schema -d "/etc/temporal/schema/postgresql/v12/temporal/versioned" || {
                   echo "Schema upgrade failed"
                   exit 1
                 }
