--- a/lib/kube/preview/temporal-deployment.yaml
+++ b/lib/kube/preview/temporal-deployment.yaml
@@ -35,68 +35,6 @@ spec:
       imagePullSecrets:
         - name: regcred
 
-      # Add initContainer to handle DB schema upgrades before Temporal starts
-      initContainers:
-      - name: temporal-schema-upgrade
-        image: temporalio/admin-tools:1.27.2-tctl-1.18
-        command: ["/bin/sh", "-c"]
-        args:
-          - |
-              echo "Exporting environment variables..."
-              export $(env | grep -v '^_' | cut -d= -f1 | xargs)
-
-              echo "Checking and upgrading schema for DB: ${DBNAME}"
-              if [ -z "${DBNAME}" ]; then
-                echo "DBNAME is not set. Skipping schema upgrade."
-                exit 0
-              fi
-
-              echo "Setting up schema (if not already present)..."
-              temporal-sql-tool \
-                --plugin ${DB} \
-                --ep "${POSTGRES_SEEDS}" \
-                -u "${POSTGRES_USER}" \
-                -pw "${POSTGRES_PWD}" \
-                -p "${DB_PORT}" \
-                --db "${DBNAME}" \
-                --tls="${POSTGRES_TLS_ENABLED}" \
-                --tls-disable-host-verification="${POSTGRES_TLS_DISABLE_HOST_VERIFICATION}" \
-                --tls-cert-file "${POSTGRES_TLS_CERT_FILE}" \
-                --tls-key-file "${POSTGRES_TLS_KEY_FILE}" \
-                --tls-ca-file "${POSTGRES_TLS_CA_FILE}" \
-                --tls-server-name "${POSTGRES_TLS_SERVER_NAME}" \
-                setup-schema -v 0.0 || echo "Schema already exists."
-
-              echo "Applying schema upgrades..."
-              temporal-sql-tool \
-                --plugin ${DB} \
-                --ep "${POSTGRES_SEEDS}" \
-                -u "${POSTGRES_USER}" \
-                -pw "${POSTGRES_PWD}" \
-                -p "${DB_PORT}" \
-                --db "${DBNAME}" \
-                --tls="${POSTGRES_TLS_ENABLED}" \
-                --tls-disable-host-verification="${POSTGRES_TLS_DISABLE_HOST_VERIFICATION}" \
-                --tls-cert-file "${POSTGRES_TLS_CERT_FILE}" \
-                --tls-key-file "${POSTGRES_TLS_KEY_FILE}" \
-                --tls-ca-file "${POSTGRES_TLS_CA_FILE}" \
-                --tls-server-name "${POSTGRES_TLS_SERVER_NAME}" \
-                update-schema -d "/etc/temporal/schema/postgresql/v12/temporal/versioned" || {
-                  echo "Schema upgrade failed"
-                  exit 1
-                }
-
-              echo "Schema upgrade completed successfully"
-
-        envFrom:
-          - secretRef:
-              name: $DOPPLER_MANAGED_SECRET_NAME
-        resources:
-          requests:
-            memory: "100Mi"
-          limits:
-            memory: "200Mi"
-
       containers:
         - name: temporal-server
           image: temporalio/server:1.27.2
@@ -111,14 +49,58 @@ spec:
               memory: '200Mi'
             limits:
               memory: '400Mi'
+
         - name: temporal-admin-tools
           image: temporalio/admin-tools:1.27.2-tctl-1.18
           imagePullPolicy: Always
           envFrom:
             - secretRef:
                 name: $DOPPLER_MANAGED_SECRET_NAME
-          stdin: true
-          tty: true
+          command: ["/bin/sh", "-c"]
+          args:
+            - |
+              echo "Checking and upgrading schema for DB: ${DBNAME}"
+              if [ -z "${DBNAME}" ]; then
+                echo "DBNAME is not set. Skipping schema upgrade."
+              else
+                echo "Setting up schema (if not already present)..."
+                temporal-sql-tool \
+                  --plugin "${DB}" \
+                  --ep "${POSTGRES_SEEDS}" \
+                  -u "${POSTGRES_USER}" \
+                  -pw "${POSTGRES_PWD}" \
+                  -p "${DB_PORT}" \
+                  --db "${DBNAME}" \
+                  --tls="${POSTGRES_TLS_ENABLED}" \
+                  --tls-disable-host-verification="${POSTGRES_TLS_DISABLE_HOST_VERIFICATION}" \
+                  --tls-cert-file "${POSTGRES_TLS_CERT_FILE}" \
+                  --tls-key-file "${POSTGRES_TLS_KEY_FILE}" \
+                  --tls-ca-file "${POSTGRES_TLS_CA_FILE}" \
+                  --tls-server-name "${POSTGRES_TLS_SERVER_NAME}" \
+                  setup-schema -v 0.0 || echo "Schema already exists."
+
+                echo "Applying schema upgrades..."
+                temporal-sql-tool \
+                  --plugin "${DB}" \
+                  --ep "${POSTGRES_SEEDS}" \
+                  -u "${POSTGRES_USER}" \
+                  -pw "${POSTGRES_PWD}" \
+                  -p "${DB_PORT}" \
+                  --db "${DBNAME}" \
+                  --tls="${POSTGRES_TLS_ENABLED}" \
+                  --tls-disable-host-verification="${POSTGRES_TLS_DISABLE_HOST_VERIFICATION}" \
+                  --tls-cert-file "${POSTGRES_TLS_CERT_FILE}" \
+                  --tls-key-file "${POSTGRES_TLS_KEY_FILE}" \
+                  --tls-ca-file "${POSTGRES_TLS_CA_FILE}" \
+                  --tls-server-name "${POSTGRES_TLS_SERVER_NAME}" \
+                  update-schema -d "/etc/temporal/schema/postgresql/v12/temporal/versioned" || {
+                    echo "Schema upgrade failed"
+                    exit 1
+                  }
+
+                echo "Schema upgrade completed successfully"
+              fi
+              exec /bin/sh
           resources:
             requests:
               memory: '100Mi'
