--- a/lib/kube/preview/temporal-deployment.yaml
+++ b/lib/kube/preview/temporal-deployment.yaml
@@ -53,17 +53,15 @@ spec:
         - name: temporal-admin-tools
           image: temporalio/admin-tools:1.27.2-tctl-1.18
           imagePullPolicy: Always
-          envFrom:
-            - secretRef:
-                name: $DOPPLER_MANAGED_SECRET_NAME
           command: ["/bin/sh", "-c"]
           args:
             - |
-              echo "Checking and upgrading schema for DB: ${DBNAME}"
+              export $(env | grep -v '^_' | cut -d= -f1) && \
+              echo "Checking and upgrading schema for DB: ${DBNAME}" && \
               if [ -z "${DBNAME}" ]; then
-                echo "DBNAME is not set. Skipping schema upgrade."
+                echo "DBNAME is not set. Skipping schema upgrade.";
               else
-                echo "Setting up schema (if not already present)..."
+                echo "Setting up schema (if not already present)...";
                 temporal-sql-tool \
                   --plugin "${DB}" \
                   --ep "${POSTGRES_SEEDS}" \
@@ -77,9 +75,9 @@ spec:
                   --tls-key-file "${POSTGRES_TLS_KEY_FILE}" \
                   --tls-ca-file "${POSTGRES_TLS_CA_FILE}" \
                   --tls-server-name "${POSTGRES_TLS_SERVER_NAME}" \
-                  setup-schema -v 0.0 || echo "Schema already exists."
+                  setup-schema -v 0.0 || echo "Schema already exists.";
 
-                echo "Applying schema upgrades..."
+                echo "Applying schema upgrades...";
                 temporal-sql-tool \
                   --plugin "${DB}" \
                   --ep "${POSTGRES_SEEDS}" \
@@ -98,9 +96,13 @@ spec:
                     exit 1
                   }
 
-                echo "Schema upgrade completed successfully"
-              fi
-              exec /bin/sh
+                echo "Schema upgrade completed successfully.";
+              fi && exec /bin/sh
+          envFrom:
+            - secretRef:
+                name: $DOPPLER_MANAGED_SECRET_NAME
+          stdin: true
+          tty: true
           resources:
             requests:
               memory: '100Mi'
