update temporal-admin-tools image version

--- a/lib/kube/preview/temporal-deployment.yaml
+++ b/lib/kube/preview/temporal-deployment.yaml
@@ -16,7 +16,7 @@ spec:
       restartPolicy: Never
       containers:
         - name: schema-upgrade
-          image: temporalio/admin-tools:1.28.0
+          image: temporalio/admin-tools:1.27.2-tctl-1.18
           command:
             - /bin/sh
             - -c
@@ -114,7 +114,7 @@ spec:
               memory: '400Mi'
 
         - name: temporal-admin-tools
-          image: temporalio/admin-tools:1.27.2
+          image: temporalio/admin-tools:1.27.2-tctl-1.18
           imagePullPolicy: Always
           envFrom:
             - secretRef:
