--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,6 +19,7 @@
     "experimentalDecorators": true,
     "resolveJsonModule": true,
     "esModuleInterop": true,
+    "noEmit": true,
     "baseUrl": ".",
     "paths": {
       "frontend/*": ["src/apps/frontend/*"],
