--- a/config/development.yml
+++ b/config/development.yml
@@ -22,9 +22,9 @@ account:
   enable_bootstrap_tasks: true
   create_test_user_account: true
   test_user:
-    first_name: "Dev"
-    last_name: "User"
-    username: "dev@example.com"
-    password: "devpassword"
+    first_name: 'Dev'
+    last_name: 'User'
+    username: 'dev@example.com'
+    password: 'devpassword'
 
 BOOTSTRAP_APP: true
