--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -10,7 +10,7 @@ services:
         APP_ENV: 'docker-test'
     environment:
       APP_ENV: 'docker-test'
-    command: "npm run test:docker"
+    command: 'npm run test:docker'
     depends_on:
       app-db:
         condition: service_started
@@ -37,15 +37,7 @@ services:
       POSTGRES_SEEDS: 'temporal-db'
       DYNAMIC_CONFIG_FILE_PATH: 'config/temporal-sql.yaml'
     healthcheck:
-      test:
-        [
-          "CMD",
-          "tctl",
-          "--address",
-          "temporal:7233",
-          "workflow",
-          "list"
-        ]
+      test: ['CMD', 'tctl', '--address', 'temporal:7233', 'workflow', 'list']
       interval: 1s
       timeout: 5s
       retries: 30
