--- a/lib/kube/shared/ingress.yaml
+++ b/lib/kube/shared/ingress.yaml
@@ -7,7 +7,7 @@ metadata:
     app: $KUBE_APP
   annotations:
     nginx.ingress.kubernetes.io/rewrite-target: /
-    cert-manager.io/cluster-issuer: "letsencrypt-prod"
+    cert-manager.io/cluster-issuer: 'letsencrypt-prod'
 spec:
   ingressClassName: nginx
   tls:
@@ -20,7 +20,7 @@ spec:
       http:
         paths:
           - pathType: Prefix
-            path: "/"
+            path: '/'
             backend:
               service:
                 name: $KUBE_APP-service
@@ -30,7 +30,7 @@ spec:
       http:
         paths:
           - pathType: Prefix
-            path: "/"
+            path: '/'
             backend:
               service:
                 name: temporal-service
