security: implement fork protection and explicit permissions
- Add pull_request_target with explicit permissions
- Require manual approval for external contributors
- Protect secrets from forked PRs
- Add explicit workflow permissions

--- a/.github/workflows/clean_on_delete.yml
+++ b/.github/workflows/clean_on_delete.yml
@@ -2,6 +2,10 @@ name: clean_on_delete
 
 on: delete
 
+permissions:
+  contents: read
+  id-token: write  # For future OIDC
+
 jobs:
   clean:
     if: github.event.ref_type == 'branch'
