--- a/.github/workflows/permanent_preview.yml
+++ b/.github/workflows/permanent_preview.yml
@@ -5,6 +5,10 @@ on:
     branches:
       - main
 
+permissions:
+  contents: read
+  id-token: write  # For future OIDC
+
 jobs:
   permanent_preview:
     uses: jalantechnologies/github-ci/.github/workflows/ci.yml@v3.2.5
