removes the notes from the clean_on_pr_closed.yml

--- a/.github/workflows/clean_on_pr_closed.yml
+++ b/.github/workflows/clean_on_pr_closed.yml
@@ -1,7 +1,7 @@
 name: clean_on_pr_closed
 
 on:
-  pull_request:  # ✅ CHANGED from pull_request_target
+  pull_request:  
     types: [closed]
 
 permissions:
