--- a/.github/workflows/clean_on_pr_closed.yml
+++ b/.github/workflows/clean_on_pr_closed.yml
@@ -1,12 +1,12 @@
 name: clean_on_pr_closed
 
 on:
-  pull_request:  
+  pull_request:  # ✅ CHANGED from pull_request_target for safer for external contributions
     types: [closed]
 
 permissions:
-  contents: read
-  pull-requests: write
+  contents: read # Allows reading repository contents
+  pull-requests: write # Allow workflow to comment on, label, and update pull request as part of automation
 
 jobs:
   clean:
