--- a/.github/workflows/preview_on_pr_update.yml
+++ b/.github/workflows/preview_on_pr_update.yml
@@ -5,10 +5,11 @@ on:
   pull_request:
     types: [opened, synchronize, reopened,ready_for_review]
 
+#  to follow the principle of least privilege and enhance security.
 permissions:
-  contents: read
-  pull-requests: write
-  id-token: write  # For future OIDC
+  contents: read  # Allows reading repository contents
+  pull-requests: write  # Allow workflow to comment on, label, and update pull request as part of automation
+  id-token: write  # Allow OIDC tokens for secure cloud authentication
 
 jobs:
   preview:
