--- a/.github/workflows/production_on_push.yml
+++ b/.github/workflows/production_on_push.yml
@@ -5,9 +5,10 @@ on:
     branches:
       - main
 
+# to follow the principle of least privilege and enhance security.
 permissions:
-  contents: read
-  id-token: write  # For future OIDC
+  contents: read   # Read-only access to repo contents for safer workflows
+  id-token: write  # Allow OIDC tokens for secure cloud authentication
 
 jobs:
   production:
