test: use github-ci branch for multi-cloud testing
Temporarily point to github-ci workflow branch
praveen/fix/hardcoded-do-node-affinity instead of @v3.2.5 to test
multi-cloud Kubernetes deployment logic.

This allows validation of conditional nodeAffinity and
provider-specific configurations during CI/CD.

⚠️ This change is for testing only and will be reverted
after verification and merge of the feature branch.

--- a/.github/workflows/permanent_preview.yml
+++ b/.github/workflows/permanent_preview.yml
@@ -7,7 +7,9 @@ on:
 
 jobs:
   permanent_preview:
-    uses: jalantechnologies/github-ci/.github/workflows/ci.yml@v3.2.5
+    # Right now, your workflow uses a tagged version (@v3.2.5), but your changes are in a branch.
+    # So we need to temporarily point to your test branch.
+    uses: jalantechnologies/github-ci/.github/workflows/ci.yml@praveen/fix/hardcoded-do-node-affinity 
     concurrency:
       group: ci-permanent-preview
       cancel-in-progress: true
