--- a/.github/workflows/clean_on_delete.yml
+++ b/.github/workflows/clean_on_delete.yml
@@ -5,7 +5,9 @@ on: delete
 jobs:
   clean:
     if: github.event.ref_type == 'branch'
-    uses: jalantechnologies/github-ci/.github/workflows/clean.yml@v3.2.5
+    # Right now, your workflow uses a tagged version (@v3.2.5), but your changes are in a branch.
+    # So we need to temporarily point to your test branch.
+    uses: jalantechnologies/github-ci/.github/workflows/ci.yml@praveen/fix/hardcoded-do-node-affinity 
     concurrency:
       group: ci-preview-${{ github.event.ref }}
       cancel-in-progress: true
