--- a/.github/workflows/production_on_push.yml
+++ b/.github/workflows/production_on_push.yml
@@ -7,7 +7,9 @@ on:
 
 jobs:
   production:
-    uses: jalantechnologies/github-ci/.github/workflows/ci.yml@v3.2.5
+    # Right now, your workflow uses a tagged version (@v3.2.5), but your changes are in a branch.
+    # So we need to temporarily point to your test branch.
+    uses: jalantechnologies/github-ci/.github/workflows/ci.yml@praveen/fix/hardcoded-do-node-affinity 
     concurrency:
       group: ci-production-${{ github.event.ref }}
       cancel-in-progress: true
